compilerGUI/ErrorLog.txt
This file logs the compiler output. When I can't compile the code, I look here for errors to fix.

~/CompileingCodeForAThing/compilerGUI$ javac *.java -Xdiags:verbose


ButtonListener.java:7
//replace 'extends' with 'implements'

ErrorDialog.java
//import java.util.ArrayList;

Main.java:9:
//Replace 'ErrorBox' with 'ErrorDialog'

ButtonListener.java:17: error: method does not override or implement a method from a supertype
    @Override
//Comment out the line. REPL.IT does not support compiler decorations.

ButtonListener.java
//import ArrayList

Compile.java:15
        Scanner s = new Scanner(p.getOutputStream());
                    ^
//IMPORTANT!!!
//We need to find a way to convert an OutputStream to an InputStream

Compile.java:36:
            Process p1 = new ProcessBuilder("xcopy "+source.getAbsolutePath()+" "+output.get bsolutePath()+" /s /e /y").start();
                                                                                            ^
                                                                               //Insert an 'A' here

Compile.java:38: error: no suitable method found for directory(String)
//Convert the directory string to a File. This applies to every "no suitable...directory(String)"

            Process p3 = new ProcessBuilder("del /s *.java").directory(output.getAbsolutePath()).start();
            I dont have the line number for this.


Compile.java:43: error: cannot find symbol
            Process p1 = new ProcessBuilder("cp -r "+source.getAbsoluteDirectory()+" "+output.getAbsolutePath()).start();
                                                           ^
  symbol:   method getAbsoluteDirectory()
  location: variable source of type File
  

Compile.java:45: error: no suitable method found for directory(String)   
Compile.java:47: error: no suitable method found for directory(String)

ErrorDialog.java:12: error: cannot find symbol
        close.addActionListener(new ActionListener(){
                                    ^
                                    
ErrorDialog.java:14: error: cannot find symbol
            public void actionPerformed(ActionEvent e){
                                        ^
                                        
ErrorDialog.java:13: error: method does not override or implement a method from a supertype
//Comment out the line in repl.it but keep it in Github.

ErrorDialog.java:18: error: cannot find symbol
        setLayout(new FLowLayout());
                      ^
//Replace 'L' with 'l'

Main.java:7: error: Main is not abstract and does not override abstract method actionPerformed(ActionEvent) in ActionListener
public class Main extends JFrame implements ActionListener{
       ^
Main.java:17: error: cannot find symbol
        buttonPanel = new JPanel();
        ^
  symbol:   variable buttonPanel
  location: class Main
Main.java:20: error: cannot find symbol
        dest = new JTextFeild("Build path");
                   ^
  symbol:   class JTextFeild
  location: class Main
Main.java:23: error: method addActionListener in class AbstractButton cannot be applied to given types;
        comp.addActionListener(new ButtonListener(src,dest,compile,dialog));
            ^
  required: ActionListener
  found: ButtonListener
  reason: argument mismatch; ButtonListener cannot be converted to ActionListener
Main.java:24: error: cannot find symbol
        buttonPanel.add(comp);
        ^
  symbol:   variable buttonPanel
  location: class Main
Main.java:26: error: cannot find symbol
        add(buttonPanel);
            ^
  symbol:   variable buttonPanel
  location: class Main
23 errors
~/CompileingCodeForAThing/compilerGUI$ 
